classDiagram
    class TaskStatus {
        <<enumeration>>
        PENDING
        COMPLETE
        SKIPPED
    }

    class Owner {
        +String name
        +int available_time
        +dict preferences
        +list pets
        +add_pet()
        +update_preferences()
        +view_tasks(pet_name: String = None, status: TaskStatus = None)
    }

    class Pet {
        +String name
        +String species
        +int age
        +String notes
        +list tasks
        +add_task()
        +remove_task()
        +get_tasks(status: TaskStatus = None)
    }

    class Task {
        +String title
        +String task_type
        +int duration
        +int priority
        +bool recurring
        +TaskStatus status
        +String? due_time
        +String? due_date
        +String? frequency
        +mark_complete()
        +update_task(**kwargs)
        +is_conflicting(other Task) bool
    }

    class Scheduler {
        +Owner owner
        +list planned_tasks
        +sort_tasks()
        +sort_by_time()
        +detect_conflicts()
        +warn_conflicts()
        +generate_daily_plan()
        +mark_task_complete(task Task, pet Pet)
        +explain_plan()
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler "1" --> "1" Owner : uses